muffy-rnc/src/snapshots/muffy_rnc__parse__tests__schema__svg11__svg-graphics-attrib.rnc.snap
---
source: muffy-rnc/src/parse.rs
expression: parse_schema(&read_to_string(&path).unwrap()).unwrap()
---
Schema {
    declarations: [
        Namespace(
            NamespaceDeclaration {
                prefix: Identifier {
                    component: "a",
                    sub_components: [],
                },
                uri: "http://relaxng.org/ns/compatibility/annotations/1.0",
            },
        ),
        Namespace(
            NamespaceDeclaration {
                prefix: Identifier {
                    component: "svg",
                    sub_components: [],
                },
                uri: "http://www.w3.org/2000/svg",
            },
        ),
    ],
    body: Pattern(
        Grammar(
            Grammar {
                contents: [
                    Include(
                        Include {
                            uri: "svg-basic-graphics-attrib.rnc",
                            inherit: Some(
                                Inherit {
                                    prefix: Identifier {
                                        component: "svg",
                                        sub_components: [],
                                    },
                                },
                            ),
                            contents: [],
                        },
                    ),
                    Definition(
                        Definition {
                            name: Identifier {
                                component: "SVG",
                                sub_components: [
                                    "image-rendering",
                                    "attrib",
                                ],
                            },
                            combine: None,
                            pattern: Optional(
                                Attribute {
                                    name_class: Name(
                                        Name {
                                            prefix: None,
                                            local: Identifier {
                                                component: "image-rendering",
                                                sub_components: [],
                                            },
                                        },
                                    ),
                                    pattern: Choice(
                                        [
                                            Value {
                                                name: Some(
                                                    String,
                                                ),
                                                value: "auto",
                                            },
                                            Value {
                                                name: Some(
                                                    String,
                                                ),
                                                value: "optimizeSpeed",
                                            },
                                            Value {
                                                name: Some(
                                                    String,
                                                ),
                                                value: "optimizeQuality",
                                            },
                                            Value {
                                                name: Some(
                                                    String,
                                                ),
                                                value: "inherit",
                                            },
                                        ],
                                    ),
                                },
                            ),
                        },
                    ),
                    Definition(
                        Definition {
                            name: Identifier {
                                component: "SVG",
                                sub_components: [
                                    "pointer-events",
                                    "attrib",
                                ],
                            },
                            combine: None,
                            pattern: Optional(
                                Attribute {
                                    name_class: Name(
                                        Name {
                                            prefix: None,
                                            local: Identifier {
                                                component: "pointer-events",
                                                sub_components: [],
                                            },
                                        },
                                    ),
                                    pattern: Choice(
                                        [
                                            Value {
                                                name: Some(
                                                    String,
                                                ),
                                                value: "visiblePainted",
                                            },
                                            Value {
                                                name: Some(
                                                    String,
                                                ),
                                                value: "visibleFill",
                                            },
                                            Value {
                                                name: Some(
                                                    String,
                                                ),
                                                value: "visibleStroke",
                                            },
                                            Value {
                                                name: Some(
                                                    String,
                                                ),
                                                value: "visible",
                                            },
                                            Value {
                                                name: Some(
                                                    String,
                                                ),
                                                value: "painted",
                                            },
                                            Value {
                                                name: Some(
                                                    String,
                                                ),
                                                value: "fill",
                                            },
                                            Value {
                                                name: Some(
                                                    String,
                                                ),
                                                value: "stroke",
                                            },
                                            Value {
                                                name: Some(
                                                    String,
                                                ),
                                                value: "all",
                                            },
                                            Value {
                                                name: Some(
                                                    String,
                                                ),
                                                value: "none",
                                            },
                                            Value {
                                                name: Some(
                                                    String,
                                                ),
                                                value: "inherit",
                                            },
                                        ],
                                    ),
                                },
                            ),
                        },
                    ),
                    Definition(
                        Definition {
                            name: Identifier {
                                component: "SVG",
                                sub_components: [
                                    "shape-rendering",
                                    "attrib",
                                ],
                            },
                            combine: None,
                            pattern: Optional(
                                Attribute {
                                    name_class: Name(
                                        Name {
                                            prefix: None,
                                            local: Identifier {
                                                component: "shape-rendering",
                                                sub_components: [],
                                            },
                                        },
                                    ),
                                    pattern: Choice(
                                        [
                                            Value {
                                                name: Some(
                                                    String,
                                                ),
                                                value: "auto",
                                            },
                                            Value {
                                                name: Some(
                                                    String,
                                                ),
                                                value: "optimizeSpeed",
                                            },
                                            Value {
                                                name: Some(
                                                    String,
                                                ),
                                                value: "crispEdges",
                                            },
                                            Value {
                                                name: Some(
                                                    String,
                                                ),
                                                value: "geometricPrecision",
                                            },
                                            Value {
                                                name: Some(
                                                    String,
                                                ),
                                                value: "inherit",
                                            },
                                        ],
                                    ),
                                },
                            ),
                        },
                    ),
                    Definition(
                        Definition {
                            name: Identifier {
                                component: "SVG",
                                sub_components: [
                                    "text-rendering",
                                    "attrib",
                                ],
                            },
                            combine: None,
                            pattern: Optional(
                                Attribute {
                                    name_class: Name(
                                        Name {
                                            prefix: None,
                                            local: Identifier {
                                                component: "text-rendering",
                                                sub_components: [],
                                            },
                                        },
                                    ),
                                    pattern: Choice(
                                        [
                                            Value {
                                                name: Some(
                                                    String,
                                                ),
                                                value: "auto",
                                            },
                                            Value {
                                                name: Some(
                                                    String,
                                                ),
                                                value: "optimizeSpeed",
                                            },
                                            Value {
                                                name: Some(
                                                    String,
                                                ),
                                                value: "optimizeLegibility",
                                            },
                                            Value {
                                                name: Some(
                                                    String,
                                                ),
                                                value: "geometricPrecision",
                                            },
                                            Value {
                                                name: Some(
                                                    String,
                                                ),
                                                value: "inherit",
                                            },
                                        ],
                                    ),
                                },
                            ),
                        },
                    ),
                    Definition(
                        Definition {
                            name: Identifier {
                                component: "SVG",
                                sub_components: [
                                    "Graphics",
                                    "attrib",
                                ],
                            },
                            combine: Some(
                                Interleave,
                            ),
                            pattern: Group(
                                [
                                    Name(
                                        Name {
                                            prefix: None,
                                            local: Identifier {
                                                component: "SVG",
                                                sub_components: [
                                                    "image-rendering",
                                                    "attrib",
                                                ],
                                            },
                                        },
                                    ),
                                    Name(
                                        Name {
                                            prefix: None,
                                            local: Identifier {
                                                component: "SVG",
                                                sub_components: [
                                                    "pointer-events",
                                                    "attrib",
                                                ],
                                            },
                                        },
                                    ),
                                    Name(
                                        Name {
                                            prefix: None,
                                            local: Identifier {
                                                component: "SVG",
                                                sub_components: [
                                                    "shape-rendering",
                                                    "attrib",
                                                ],
                                            },
                                        },
                                    ),
                                    Name(
                                        Name {
                                            prefix: None,
                                            local: Identifier {
                                                component: "SVG",
                                                sub_components: [
                                                    "text-rendering",
                                                    "attrib",
                                                ],
                                            },
                                        },
                                    ),
                                ],
                            ),
                        },
                    ),
                ],
            },
        ),
    ),
}
