muffy-rnc/src/snapshots/muffy_rnc__parse__tests__schema__svg11__svg-profile.rnc.snap
---
source: muffy-rnc/src/parse.rs
expression: parse_schema(&read_to_string(&path).unwrap()).unwrap()
---
Schema {
    declarations: [
        DefaultNamespace(
            DefaultNamespaceDeclaration {
                prefix: None,
                uri: "http://www.w3.org/2000/svg",
            },
        ),
        Namespace(
            NamespaceDeclaration {
                prefix: Identifier {
                    component: "a",
                    sub_components: [],
                },
                uri: "http://relaxng.org/ns/compatibility/annotations/1.0",
            },
        ),
    ],
    body: Pattern(
        Grammar(
            Grammar {
                contents: [
                    Definition(
                        Definition {
                            name: Identifier {
                                component: "SVG",
                                sub_components: [
                                    "Profile",
                                    "extra",
                                    "attrib",
                                ],
                            },
                            combine: None,
                            pattern: Empty,
                        },
                    ),
                    Definition(
                        Definition {
                            name: Identifier {
                                component: "SVG",
                                sub_components: [
                                    "Profile",
                                    "attrib",
                                ],
                            },
                            combine: Some(
                                Interleave,
                            ),
                            pattern: Group(
                                [
                                    Optional(
                                        Attribute {
                                            name_class: Name(
                                                Name {
                                                    prefix: None,
                                                    local: Identifier {
                                                        component: "color-profile",
                                                        sub_components: [],
                                                    },
                                                },
                                            ),
                                            pattern: Text,
                                        },
                                    ),
                                    Name(
                                        Name {
                                            prefix: None,
                                            local: Identifier {
                                                component: "SVG",
                                                sub_components: [
                                                    "Profile",
                                                    "extra",
                                                    "attrib",
                                                ],
                                            },
                                        },
                                    ),
                                ],
                            ),
                        },
                    ),
                    Annotation(
                        AnnotationElement {
                            name: Name {
                                prefix: Some(
                                    Identifier {
                                        component: "a",
                                        sub_components: [],
                                    },
                                ),
                                local: Identifier {
                                    component: "documentation",
                                    sub_components: [],
                                },
                            },
                            attributes: [],
                        },
                    ),
                    Definition(
                        Definition {
                            name: Identifier {
                                component: "SVG",
                                sub_components: [
                                    "Profile",
                                    "extra",
                                    "class",
                                ],
                            },
                            combine: None,
                            pattern: NotAllowed,
                        },
                    ),
                    Definition(
                        Definition {
                            name: Identifier {
                                component: "SVG",
                                sub_components: [
                                    "Profile",
                                    "class",
                                ],
                            },
                            combine: Some(
                                Choice,
                            ),
                            pattern: Choice(
                                [
                                    Name(
                                        Name {
                                            prefix: None,
                                            local: Identifier {
                                                component: "color-profile",
                                                sub_components: [],
                                            },
                                        },
                                    ),
                                    Name(
                                        Name {
                                            prefix: None,
                                            local: Identifier {
                                                component: "SVG",
                                                sub_components: [
                                                    "Profile",
                                                    "extra",
                                                    "class",
                                                ],
                                            },
                                        },
                                    ),
                                ],
                            ),
                        },
                    ),
                    Annotation(
                        AnnotationElement {
                            name: Name {
                                prefix: Some(
                                    Identifier {
                                        component: "a",
                                        sub_components: [],
                                    },
                                ),
                                local: Identifier {
                                    component: "documentation",
                                    sub_components: [],
                                },
                            },
                            attributes: [],
                        },
                    ),
                    Definition(
                        Definition {
                            name: Identifier {
                                component: "SVG",
                                sub_components: [
                                    "color-profile",
                                    "content",
                                ],
                            },
                            combine: None,
                            pattern: Many0(
                                Name(
                                    Name {
                                        prefix: None,
                                        local: Identifier {
                                            component: "SVG",
                                            sub_components: [
                                                "Description",
                                                "class",
                                            ],
                                        },
                                    },
                                ),
                            ),
                        },
                    ),
                    Definition(
                        Definition {
                            name: Identifier {
                                component: "color-profile",
                                sub_components: [],
                            },
                            combine: None,
                            pattern: Element {
                                name_class: Name(
                                    Name {
                                        prefix: None,
                                        local: Identifier {
                                            component: "color-profile",
                                            sub_components: [],
                                        },
                                    },
                                ),
                                pattern: Group(
                                    [
                                        Name(
                                            Name {
                                                prefix: None,
                                                local: Identifier {
                                                    component: "attlist",
                                                    sub_components: [
                                                        "color-profile",
                                                    ],
                                                },
                                            },
                                        ),
                                        Name(
                                            Name {
                                                prefix: None,
                                                local: Identifier {
                                                    component: "SVG",
                                                    sub_components: [
                                                        "color-profile",
                                                        "content",
                                                    ],
                                                },
                                            },
                                        ),
                                    ],
                                ),
                            },
                        },
                    ),
                    Definition(
                        Definition {
                            name: Identifier {
                                component: "attlist",
                                sub_components: [
                                    "color-profile",
                                ],
                            },
                            combine: Some(
                                Interleave,
                            ),
                            pattern: Group(
                                [
                                    Name(
                                        Name {
                                            prefix: None,
                                            local: Identifier {
                                                component: "SVG",
                                                sub_components: [
                                                    "Core",
                                                    "attrib",
                                                ],
                                            },
                                        },
                                    ),
                                    Name(
                                        Name {
                                            prefix: None,
                                            local: Identifier {
                                                component: "SVG",
                                                sub_components: [
                                                    "XLink",
                                                    "attrib",
                                                ],
                                            },
                                        },
                                    ),
                                    Optional(
                                        Attribute {
                                            name_class: Name(
                                                Name {
                                                    prefix: None,
                                                    local: Identifier {
                                                        component: "local",
                                                        sub_components: [],
                                                    },
                                                },
                                            ),
                                            pattern: Text,
                                        },
                                    ),
                                    Attribute {
                                        name_class: Name(
                                            Name {
                                                prefix: None,
                                                local: Identifier {
                                                    component: "name",
                                                    sub_components: [],
                                                },
                                            },
                                        ),
                                        pattern: Text,
                                    },
                                    Optional(
                                        Attribute {
                                            name_class: Name(
                                                Name {
                                                    prefix: None,
                                                    local: Identifier {
                                                        component: "rendering-intent",
                                                        sub_components: [],
                                                    },
                                                },
                                            ),
                                            pattern: Choice(
                                                [
                                                    Value {
                                                        name: Some(
                                                            String,
                                                        ),
                                                        value: "auto",
                                                    },
                                                    Value {
                                                        name: Some(
                                                            String,
                                                        ),
                                                        value: "perceptual",
                                                    },
                                                    Value {
                                                        name: Some(
                                                            String,
                                                        ),
                                                        value: "relative-colorimetric",
                                                    },
                                                    Value {
                                                        name: Some(
                                                            String,
                                                        ),
                                                        value: "saturation",
                                                    },
                                                    Value {
                                                        name: Some(
                                                            String,
                                                        ),
                                                        value: "absolute-colorimetric",
                                                    },
                                                ],
                                            ),
                                        },
                                    ),
                                ],
                            ),
                        },
                    ),
                ],
            },
        ),
    ),
}
